<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="vertical" 
	android:scrollbarStyle="outsideOverlay" 
	android:scrollbarAlwaysDrawVerticalTrack="true"
	android:background="@drawable/backgroundport">
<TextView android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	android:text="@string/app_name" 
	android:id="@+id/Welcome1"
	android:textSize="26sp"
	android:gravity="center"></TextView>
<TextView android:text="                                         " 
	android:id="@+id/Spacer1" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:textSize="10sp"></TextView>
<TextView android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:text="@string/warning" 
	android:id="@+id/Warning"
	android:textSize="18sp"></TextView>
<TextView android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:text="@string/warningMsg" 
	android:id="@+id/WarningMsg"
	android:textSize="14sp"></TextView>
<View android:layout_width="fill_parent"
	android:layout_height="2dip" android:background="#FFFFFFFF" />
<TextView android:text="                                         " 
	android:id="@+id/Spacer2" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"></TextView>
<Button android:text="@string/verifyWimaxRSA"
	android:id="@+id/wimaxRSAButton" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"></Button>
<TextView android:text=" " 
	android:id="@+id/Spacer3" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="4sp"
	android:layout_gravity="center"></TextView>
<TextView android:text="@string/results" 
	android:id="@+id/Results" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:textSize="18sp"></TextView>
<TextView android:text=" " 
	android:id="@+id/FinalResults" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:layout_gravity="center"
	android:minLines="2"></TextView>
<TextView android:text=" " 
	android:id="@+id/Spacer4" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="4sp"
	android:layout_gravity="center"></TextView>
<View android:layout_width="fill_parent"
	android:layout_height="2dip" android:background="#FFFFFFFF" />
<TextView android:text="@string/author"
	android:id="@+id/author" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:textColor="#ffffffff"></TextView>
<TextView android:text=" " 
	android:id="@+id/Spacer5" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="14sp"></TextView>	
<TextView android:text="@string/Credits"
	android:id="@+id/Credits" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:textColor="#ffffffff"></TextView>
</LinearLayout>
</ScrollView>
